add some fun css

--- a/homework/pizza-express/views/layout.hbs
+++ b/homework/pizza-express/views/layout.hbs
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pizza Express</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 </head>
 <body>
+    <div class="head">
     <h1>Your Pizza Headquarters</h1>
+    </div>
     {{{body}}}
+
+
+    <script src="/js/app.js"></script>
 </body>
 </html>
