--- a/homework/pizza-express/views/order.hbs
+++ b/homework/pizza-express/views/order.hbs
@@ -1,1 +1,3 @@
 <h3>{{order}}</h3>
+<p>You really need that much???? That's a lot of pie!</p>
+<img src="https://familyguyaddicts.files.wordpress.com/2014/07/petergriffen-rollerblade-animation-actionmodal-0014x.png" class="grow" alt="">
