--- a/homework/pizza-express/views/toppings.hbs
+++ b/homework/pizza-express/views/toppings.hbs
@@ -1,1 +1,2 @@
 <h3>{{topping}}</h3>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS1_cL2MpyqG3auB5IlWUm9umn0RVBeITUum9UqqlXoxcUofux2eQ" class="mushroom" alt="">
