homework MVP done

--- a/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/index.hbs
+++ b/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/index.hbs
@@ -9,3 +9,9 @@
     <br>
     {{/each}}
 </ul>
+<div>
+    <a href="http://localhost:3000/pirates/new">Let's Make Some MF Pirates!!</a>
+</div>
+<div>
+    
+</div>
