--- a/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/show.hbs
+++ b/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/show.hbs
@@ -7,3 +7,6 @@
 <li>BASE: {{pirate.base}}</li>
 <li>NICKNAME: {{pirate.nickname}}</li>
 </ul>
+<div>
+    <a href="http://localhost:3000/pirates/index">Back to the list</a>
+</div>
