--- a/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/index.hbs
+++ b/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/index.hbs
@@ -1,7 +1,7 @@
 <h1>ARRRRRRRRRRRRRR</h1>
 <ul>
     {{#each pirates}}
-    <li>{{name}}</li>
+    <li><a href="../pirates/{{@index}}">{{name}}</a></li>
     <li>{{birthplace}}</li>
     <li>{{death_year}}</li>
     <li>{{base}}</li>
@@ -13,5 +13,5 @@
     <a href="http://localhost:3000/pirates/new">Let's Make Some MF Pirates!!</a>
 </div>
 <div>
-    
+
 </div>
