--- a/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/show.hbs
+++ b/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/show.hbs
@@ -8,5 +8,8 @@
 <li>NICKNAME: {{pirate.nickname}}</li>
 </ul>
 <div>
-    <a href="http://localhost:3000/pirates/index">Back to the list</a>
+    <a href="http://localhost:3000/pirates">Back to the list</a>
+</div>
+<div>  
+    <a href="http://localhost:3000/pirates/new">Make New Pirates</a>
 </div>
