--- a/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/new.hbs
+++ b/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/new.hbs
@@ -23,6 +23,6 @@
     <input type="submit" value="Make A Pirate">
   </div>
   <div>
-      <a href="http://localhost:3000/pirates/index">Show me the Pirates!!!</a>
+      <a href="http://localhost:3000/pirates">Show me the Pirates!!!</a>
   </div>
 </form>
