--- a/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/index.hbs
+++ b/homework/express/express-pirates-create-read/pirates-wiki/views/pirates/index.hbs
@@ -6,12 +6,13 @@
     <li>{{death_year}}</li>
     <li>{{base}}</li>
     <li>{{nickname}}</li>
+   <a href="http://localhost:3000/pirates/{{@index}}/edit">Edit me!</a>
+    <form action="../pirates/{{@index}}?_method=DELETE" method="POST">
+    <input type="submit" value="DELETE"/>
+    </form>
     <br>
     {{/each}}
 </ul>
 <div>
     <a href="http://localhost:3000/pirates/new">Let's Make Some MF Pirates!!</a>
-</div>
-<div>
-
 </div>
