--- a/homework/mongo/donut-shop/donut_mongoose/views/donuts/show.hbs
+++ b/homework/mongo/donut-shop/donut_mongoose/views/donuts/show.hbs
@@ -2,7 +2,7 @@
 
 	<h2>You are viewing:
 
-		<<<< DONUT NAME HERE >>>>
+		{{donut.name}}
 
 	</h2>
 
@@ -11,37 +11,39 @@
 	<div class="donut-container-show">
 		<h2 id="donut-name">
 
-				<<<< DONUT NAME HERE >>>>
+				{{donut.name}}
 
 		</h2>
 
-				<<<< DONUT IMAGE HERE >>>>
+				<img src="{{donut.img}}" alt="">
 
 		<br>
 		<h3>Description:</h3>
 			<p>
 
-				<<<< DONUT DESCRIPTION HERE >>>>
+				{{donut.description}}
 
 			</p><br>
 		<h3>Price:</h3>
 			<p id="cost">$
 
-				<<<< DONUT PRICE HERE >>>> each</p><br>
+				{{donut.price}} each</p><br>
 
 			<h3 id="quantity">
 
-	 				<<<< DONUT QUANTITY >>>> remaining
+	 				{{donut.qty}} remaining
 
 			</h3>
 
 			<br>
-
-			<<<< LINK TO THE DONUT's EDIT PAGE >>>>
-
+			<div>
+			<a href="/{{donut._id}}/edit">Edit ME!!!</a>
+			</div>
 			<<<< BONUS: BUTTON THAT UPDATES THE COUNT >>>>
 
+			<form action="/{{donut._id}}?_method=DELETE" method="POST">
+       			 <input type="submit" value="Delete">	
+				</form>
 		</div>
 
-		<<<< BUTTON THAT DELETED THE DONUT >>>>
 </main>
